# ynab-rs

./: Cargo.toml  README.md
src/: domain.rs
tests/: acceptance.rs
tests/common/: assembly.rs  example_data.rs  mod.rs
tests/common/assembly/: domain.rs
